<resources>
    <string name="app_name">诚乎</string>
    <string name="img_descript">图片</string>
    <string name="loading_text">装载中</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="password">密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="has_no_account">没有账号？</string>
    <string name="register_immediately">立即注册</string>
    <string name="phone_number_prefix">+86</string>
    <string name="forgot_password_title">忘记密码</string>
    <string name="phone_number">手机号</string>
    <string name="cert_number">验证号</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="complete">完成</string>
    <string name="get_cert_number">获取验证码</string>
    <string name="send_cert_number_already">您好，验证码已发送到您的手机，请注意查收</string>
    <string name="password_changed_success">密码已修改成功</string>
    <string name="request_number">邀请码</string>
    <string name="read_and_accept_license">验证码</string>
    <string name="chengxin_doc"></string>
    <string name="register">注册</string>
    <string name="read_and_accept">我已阅读并同意接受</string>
    <string name="condition">《诚呼服务条款》</string>
    <string name="register_successful">恭喜您，注册成功</string>
    <string name="register_code">为了更好的体验，请完善你的认证信息。</string>
    <string name="register_cert">马上认证</string>
    <string name="register_skip">跳过</string>
    <string name="tab_home">首页</string>
    <string name="tab_hot">热点</string>
    <string name="tab_eval">评价</string>
    <string name="tab_follow">关注</string>
    <string name="tab_me">我的</string>
    <string name="familiar">熟人</string>
    <string name="enterprise">企业</string>
    <string name="enterprise_single">个体户</string>
    <string name="comedity">产品</string>
    <string name="item">项目</string>
    <string name="serve">服务</string>
    <string name="sort_set">排序</string>
    <string name="condition_set">筛选</string>
    <string name="str_search">搜索</string>
    <string name="search_query_home">搜索诚乎代码/用户/企业/产品/项目/服务</string>
    <string name="search_query_eval">搜索诚乎代码/用户名/企业名</string>
    <string name="search_query">搜索关键字</string>
    <string name="select_search_content">请先选择定制内容再搜索</string>
    <string name="search_content">搜索定制内容</string>
    <string name="search_history">历史记录</string>
    <string name="chengxin_number">诚乎代码</string>
    <string name="video_play">轮播图视频</string>
    <string name="eval_detail">评价详情</string>
    <string name="rate_zero">暂无</string>
    <string name="interest">人气</string>
    <string name="trust">诚信度</string>
    <string name="latest">最新</string>
    <string name="city">城市</string>
    <string name="all">全部</string>
    <string name="more">更多</string>
    <string name="leixing">类型</string>
    <string name="hangye">行业</string>
    <string name="fenlei">分类</string>
    <string name="comedity_kind">产品分类</string>
    <string name="item_kind">项目分类</string>
    <string name="serve_kind">服务分类</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="all_city">全国城市</string>
    <string name="city_beijing">北京</string>
    <string name="city_shanghai">上海</string>
    <string name="city_guangzhou">广州</string>
    <string name="city_shenzhen">深圳</string>
    <string name="str_follow">+ 关注</string>
    <string name="str_followed">已关注</string>
    <string name="str_chengxin_id">诚乎代码: </string>
    <string name="str_main_comedity">主营产品</string>
    <string name="str_item">项目</string>
    <string name="str_suggest_man">引荐人</string>
    <string name="str_serve">服务</string>
    <string name="str_chengxin_rate">诚乎度 :</string>
    <string name="str_like_count">点赞 :</string>
    <string name="str_eval_count">评价 :</string>
    <string name="str_person">个人</string>
    <string name="str_enterprise">企业</string>
    <string name="str_enterprise_personal">个体户</string>
    <string name="str_read_count">阅读</string>
    <string name="str_share">分享</string>
    <string name="str_collect">收藏</string>
    <string name="person_detail">个人信息</string>
    <string name="basic_info">基本信息</string>
    <string name="company_name">所在公司：</string>
    <string name="company_net">公司官网：</string>
    <string name="place">所在地：</string>
    <string name="weixin_number">微信号：</string>
    <string name="position">职位：</string>
    <string name="person_consent">我们承诺</string>
    <string name="enterprise_news_no_comma">公司信息</string>
    <string name="enterprise_news">公司信息：</string>
    <string name="enterprise_net">公司官网：</string>
    <string name="business">主营业务：</string>
    <string name="weixin">微信公众号：</string>
    <string name="responsibly_person_name">负责人姓名：</string>
    <string name="person_position">负责人职位：</string>
    <string name="personal_phonenum">负责人手机号：</string>
    <string name="personal_weixin_num">负责人微信号：</string>
    <string name="office_place">办公地址：</string>
    <string name="recommend">引荐人：</string>
    <string name="business_cert">营业执照：</string>
    <string name="arrow_up">收起</string>
    <string name="all_2000">全部(2000)</string>
    <string name="front_eval_1000">正面评价(1000)</string>
    <string name="all_eval">全部评价</string>
    <string name="front_eval">正面评价</string>
    <string name="back_eval">负面评价</string>
    <string name="backword_eval">负面评价(1000)</string>
    <string name="eval_content">评价内容</string>
    <string name="arrow_down">展开</string>
    <string name="more_detail">查看全部%d条回复></string>
    <string name="think">想说点什么</string>
    <string name="empty_evaluate">暂时还没有评论！</string>
    <string name="empty_comedity">暂时还没有产品！</string>
    <string name="empty_item">暂时还没有项目！</string>
    <string name="empty_serve">暂时还没有服务！</string>
    <string name="btn_send">发送</string>
    <string name="enterprise_detail">企业信息</string>
    <string name="no_network">网络不给力，点击屏幕重试</string>
    <string name="item_detail">项目详情</string>
    <string name="item_name">华盟本育</string>
    <string name="item_status_name">教育</string>
    <string name="item_market">所在城市: </string>
    <string name="item_comment">项目介绍</string>
    <string name="item_net">网址: </string>
    <string name="item_place">所需资源: </string>
    <string name="item_connect">联系我信息</string>
    <string name="person_name_comma">姓名: </string>
    <string name="phone_number_comma">手机号: </string>
    <string name="cert_number_comma">验证号: </string>
    <string name="company">公司</string>
    <string name="instead_num">诚乎代码: </string>
    <string name="instead_rate">诚乎度: </string>
    <string name="write_time">发布时间: </string>
    <string name="address_detail">详细地址</string>
    <string name="comedity_detail">产品详情</string>
    <string name="comedity_main">主营产品</string>
    <string name="comedity_comment">产品介绍</string>
    <string name="comedity_number">编号：</string>
    <string name="comedity_market">實本店地址：</string>
    <string name="comedity_buy">立即购买</string>
    <string name="declare_comedity">发布产品</string>
    <string name="comedity_name">产品名称: </string>
    <string name="comedity_main_comma">主营产品: </string>
    <string name="comedity_main_explain">最大三个主营产品。当勾选为主营产品时将在首页，个人详情里展示</string>
    <string name="comedity_price">产品价格: </string>
    <string name="comedity_type">产品分类: </string>
    <string name="comedity_comment_comma">产品介绍: </string>
    <string name="yuan">元</string>
    <string name="comedity_net">产品网址:</string>
    <string name="comedity_market_comma">實本店地址: </string>
    <string name="comedity_picture">产品图片: </string>
    <string name="declare">发布</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="make_eval">发表评价</string>
    <string name="make_eval_person">评价个人</string>
    <string name="make_eval_enterprise">评价企业</string>
    <string name="make_eval_person_name">评价人姓名: </string>
    <string name="make_eval_type">评价类型: </string>
    <string name="make_eval_mode">评价方式: </string>
    <string name="make_eval_reason">评价原因: </string>
    <string name="make_eval_content">评价内容: </string>
    <string name="make_eval_max_img_size">最多6张图片</string>
    <string name="make_eval_img_upload">上传图片</string>
    <string name="right_mistake">我要纠错</string>
    <string name="right_mistake_receive_eval_person">被评价人：</string>
    <string name="right_mistake_eval_person">评价人：</string>
    <string name="right_mistake_eval_content">评价内容：</string>
    <string name="right_mistake_type">纠错类型</string>
    <string name="right_mistake_reason">纠错原因</string>
    <string name="right_mistake_evidence">纠错依据</string>
    <string name="make_comedity">发布产品</string>
    <string name="make_comedity_name">产品名称：</string>
    <string name="make_comedity_main">主营产品：</string>
    <string name="make_comedity_price">产品价格：</string>
    <string name="make_comedity_type">产品分类：</string>
    <string name="make_comedity_comment">产品介绍：</string>
    <string name="make_comedity_net">产品网址：</string>
    <string name="make_comedity_place">实本店地址：</string>
    <string name="make_comedity_picture">产品图片：</string>
    <string name="make_comedity_max_image_count">最多五张</string>
    <string name="make">发布</string>
    <string name="make_comedity_placefolder">最多三个主营产品。当勾选为主营产品是将在首页，个人详情里展示。 </string>
    <string name="make_serve">发布服务</string>
    <string name="make_serve_name">服务名城：</string>
    <string name="make_serve_type">服务分类：</string>
    <string name="make_serve_comment">服务介绍：</string>
    <string name="make_serve_net">服务网址：</string>
    <string name="make_address">地址：</string>
    <string name="make_item">发布项目</string>
    <string name="make_item_logo">上传LOGO：</string>
    <string name="make_item_name">项目名城：</string>
    <string name="make_item_type">项目分类：</string>
    <string name="make_item_city">所在城市：</string>
    <string name="make_item_comment">项目介绍：</string>
    <string name="make_item_place">所需资源：</string>
    <string name="make_item_net">项目网址：</string>
    <string name="make_item_check">展示在首页（勾选时展示在首页，仅展示1个项目）</string>
    <string name="make_item_connect_me">联系人信息</string>
    <string name="make_item_weixin">微信：</string>
    <string name="hot_detail">热点详情</string>
    <string name="hot_detail_read_count">阅读: </string>
    <string name="hot_detail_profession">同行企业</string>
    <string name="str_my_following">我的关注</string>
    <string name="str_connection">诚乎链</string>
    <string name="str_in_my_home">我的上家</string>
    <string name="str_1_du_friend">一度好友</string>
    <string name="str_2_du_friend">二度好友</string>
    <string name="str_3_du_friend">三度好友</string>
    <string name="str_you_can_know">---   你可能想认识   ---</string>
    <string name="str_follow_me">设为星标好友</string>
    <string name="str_follow_notme">取消关注</string>
    <string name="str_follow_title_enterprise">企业列表</string>
    <string name="chengxin_rule_eval_title">评价人：</string>
    <string name="chengxin_rule_eval_content">1. 推荐好友注册， +2个好评。\n2. 写个完整评价， +5个好评。\n3. 快捷评价， +3个好评。</string>
    <string name="chengxin_rule_update_title">纠错：</string>
    <string name="chengxin_rule_update_content">1. 纠错成功， +6个好评。\n2. 纠错失败不扣分。\n3. 夸大评价， +4个差评。\n4. 虚假评价， +7个差评。</string>
    <string name="chengxin_rule_receive_title">被评价人：</string>
    <string name="chengxin_rule_receive_content">1. 被正面评价， +4个好评。\n2. 被负面评价， +4个差评。</string>
    <string name="version_number">版本型号NU_2.0</string>
    <string name="version_upgrade_explain">版本更新说明：</string>
    <string name="version_upgrade_descript">1.解决了1.0版本的卡顿问题 \n 2.增加了上传长视频的功能 \n 3.优化了缓存电视剧的操作步骤</string>
    <string name="notify_remind_again">以后再说</string>
    <string name="upgrade_immediate">立即更新</string>
    <string name="str_sample">XXXXXX</string>
    <string name="str_sample_date">2017-10-22</string>
    <string name="str_sample_datetime">2017-10-27 10:20:00</string>
    <string name="number_bracket_20">(20)</string>
    <string name="str_sample_title">从事食品行业的人，绝不会吃哪些食品？</string>
    <string name="str_sample_eval">评价内容：主播，您好!  我想知道如何解决开发中遇到的这个问题呢？困扰我好久了。主播，您好!  我想知道如何解决开发中遇到的这个问题呢？好。。。</string>
</resources>