<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/dialog_upgrade_version"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:baselineAligned="false">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_large_more"
		android:layout_marginEnd="@dimen/margin_large_more"
		android:padding="@dimen/margin_large_more"
		android:orientation="vertical"
		android:background="@drawable/round_rect_white">

		<TextView
			android:id="@+id/txt_title"
			style="@style/layout_mw"
			android:layout_marginBottom="@dimen/margin_large"
			android:gravity="center"
			android:textColor="@color/txt_dark"
			android:textSize="@dimen/text_size_16"
			android:text="@string/version_number"/>

		<View style="@style/splite_line_gray"/>

		<TextView
			style="@style/layout_mw"
			android:layout_marginTop="@dimen/margin_large"
			android:layout_marginBottom="@dimen/margin_normal"
			android:textColor="@color/txt_dark"
			android:textSize="@dimen/text_size_14"
			android:text="@string/version_upgrade_explain"/>

		<TextView
			style="@style/layout_mw"
			android:textColor="@color/txt_gray"
			android:textSize="@dimen/text_size_14"
			android:text="@string/version_upgrade_descript"/>

        <LinearLayout
            style="@style/layout_mw"
			android:layout_marginTop="@dimen/margin_extra">
            <Button
                android:id="@+id/btn_notify_again"
				style="@style/layout_0w"
				android:layout_height="@dimen/row_height_normal"
                android:background="@drawable/round_rect_gray_white"
                android:gravity="center"
                android:textSize="@dimen/text_size_14"
                android:text="@string/notify_remind_again"
                android:textColor="@color/txt_dark"/>
            <View
                android:layout_width="@dimen/margin_large"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn_upgrade"
				style="@style/layout_0w"
                android:layout_height="@dimen/row_height_normal"
                android:background="@drawable/round_rect_orange_gradient"
				android:gravity="center"
				android:textSize="@dimen/text_size_14"
				android:text="@string/upgrade_immediate"
				android:textColor="@color/color_white"/>
        </LinearLayout>
	</LinearLayout>
</LinearLayout>
