<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal"
    android:background="@color/color_white"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/image_avatar_width"
        android:layout_height="@dimen/image_avatar_width"
        android:background="@drawable/no_image"/>

    <LinearLayout
        style="@style/layout_0w"
        android:layout_marginLeft="@dimen/margin_normal"
        android:orientation="vertical">

        <LinearLayout
            style="@style/layout_mw"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_name"
                style="@style/layout_0w"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                android:textColor="@color/color_orange"/>
            <TextView
                android:id="@+id/txt_eval_type"
                style="@style/layout_ww"
                android:text="@string/front_eval"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/color_orange"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_mw"
            android:layout_marginTop="@dimen/margin_normal_below"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_content"
                style="@style/layout_ww"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/str_sample_eval"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/txt_dark"/>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_mw"
            android:layout_marginTop="@dimen/margin_normal_below"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_date"
                style="@style/layout_0w"
                android:layout_weight="2"
                android:padding="@dimen/margin_small"
                android:text="@string/str_sample_date"
                android:textSize="@dimen/text_size_10"
                android:textColor="@color/txt_gray_light"/>

            <TextView
                android:id="@+id/txt_elect_cnt"
                style="@style/layout_ww"
                android:textColor="@color/color_blue_light"
                android:text="@string/number_bracket_20"
                android:drawableLeft="@drawable/zan_sel"
                android:drawablePadding="@dimen/margin_normal"/>

            <TextView
                android:id="@+id/txt_evaluate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:textColor="@color/color_blue_light"
                android:drawableLeft="@drawable/evaluate"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_comment"
            style="@style/layout_mw"
            android:background="@drawable/bg_comment"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_comment"
                style="@style/layout_mw"
                android:padding="@dimen/margin_small"
                android:text="@string/str_sample"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_comment_left"
            android:layout_marginTop="@dimen/margin_normal"
            style="@style/layout_ww"
            android:text="@string/more_detail"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/color_main_blue"/>
    </LinearLayout>
</LinearLayout>